--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,33 +21,19 @@ services:
     image: mysql:5.7
     restart: always
     ports:
-      - 3306:3306
+      - 3307:3306
     environment:
-      MYSQL_DATABASE: helier_db
-      MYSQL_USER: helier
-      MYSQL_PASSWORD: 123456
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: toor
     volumes:
-      - db1:/var/lib/mysql
-
-  phpmyadmin:
-    image: phpmyadmin
-    restart: always
-    ports:
-      - 9999:80
-    links:
-      - db
-    environment:
-      PMA_ARBITRARY: 1
-      # PMA_HOST: dbhost
-      # PMA_PMADB: psismart_psi_db
-      # PMA_USER: psismart_userpsi
-      # PMA_PASSWORD: psismartservices
+      - db:/var/lib/mysql
 
 volumes:
-  db1:
+  db:
   
 networks:
   default:
     name: library-net
-
+    external: true
