--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
   php:
     build: .
     links:
-      - db
+      - authors_db
     volumes:
       - .:/var/www
       - ./docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
       - ./docker/php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
-  db:
+  authors_db:
     image: mysql:5.7
     restart: always
     ports:
@@ -28,10 +28,10 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: toor
     volumes:
-      - db:/var/lib/mysql
+      - authors_db:/var/lib/mysql
 
 volumes:
-  db:
+  authors_db:
   
 networks:
   default:
